# http-s3

./: http-s3.cabal  stack.yaml
src/Network/HTTP/: S3.hs
src/Network/HTTP/S3/: Signature.hs
test/Network/HTTP/S3/: SignatureSpec.hs
