name:                http-s3
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/rebeccaskinner/http-s3#readme
license:             BSD3
license-file:        LICENSE
author:              Rebecca Skinner
maintainer:          rebecca.skinner@ctl.io
copyright:           Copyright (C) 2015 Century Link
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.S3
                     , Network.HTTP.S3.Signature
  build-depends:       base >= 4.7 && < 5
                     , HTTP >= 4000.2.0
                     , network-uri >= 2.6.0.0
                     , text >= 1.2.1.0
                     , time >= 1.2.0.3
                     , cryptonite >= 0.13
                     , bytestring >= 0.10.6.0
  default-language:    Haskell2010

test-suite http-s3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http-s3
                     , hspec
                     , QuickCheck
                     , HTTP >= 4000.2.0
                     , network-uri >= 2.6.0.0
                     , text >= 1.2.1.0
                     , cryptonite >= 0.13
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rebeccaskinner/http-s3
